--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,2 @@
 PORT = 5000
-MONGO_URL = mongodb+srv://danishsidd011:os4EdwDmWWZx0FFR@cluster0.rficwux.mongodb.net/?retryWrites=true&w=majority
-
-# os4EdwDmWWZx0FFR
+MONGO_URL = 
